solution/k8s/server_xonotic/xonotic/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: agones-gameserver.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agones-gameserver
                port:
                  number: 7000
